# Transporter

./: README.md  com.github.1enn0.transporter.json  meson.build
data/: com.github.1enn0.transporter.appdata.xml.in  com.github.1enn0.transporter.contract  com.github.1enn0.transporter.desktop.in  com.github.1enn0.transporter.gresource.xml  com.github.1enn0.transporter.gschema.xml
po/: com.github.1enn0.transporter.pot  de.po  fr_FR.po  pt_BR.po  ru.po
src/: Settings.vala  Transporter.vala  TransporterWindow.vala  meson.build  style.css
src/View/: DropView.vala
